@@ -60,7 +60,7 @@
   what we have really *are* interpolation weights, and not something
   else. 
 */
-const Numeric sum_check_epsilon = 1e-6;
+DEBUG_ONLY(const Numeric sum_check_epsilon = 1e-6;)
 
 
 //! Allowed tolerance for fractional distance values
