@@ -637,7 +637,7 @@ void jacobianCalcFreqShift(
   const Vector&                    yb,
   const Index&                     stokes_dim,
   const Vector&                    f_grid,
-  const Matrix&                    sensor_los,
+  const Matrix&                    DEBUG_ONLY(sensor_los),
   const Matrix&                    mblock_dlos_grid,
   const Sparse&                    sensor_response,
   const Vector&                    sensor_time,
@@ -855,7 +855,7 @@ void jacobianCalcFreqStretch(
   const Vector&                    yb,
   const Index&                     stokes_dim,
   const Vector&                    f_grid,
-  const Matrix&                    sensor_los,
+  const Matrix&                    DEBUG_ONLY(sensor_los),
   const Matrix&                    mblock_dlos_grid,
   const Sparse&                    sensor_response,
   const ArrayOfIndex&              sensor_response_pol_grid,
@@ -1099,7 +1099,7 @@ void jacobianCalcPointingZaInterp(
   const Vector&                    yb _U_,
   const Index&                     stokes_dim,
   const Vector&                    f_grid,
-  const Matrix&                    sensor_los,
+  const Matrix&                    DEBUG_ONLY(sensor_los),
   const Matrix&                    mblock_dlos_grid,
   const Sparse&                    sensor_response,
   const Vector&                    sensor_time,
